2005-11-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/nested-system-start-delimiter-engraver.cc (from_list): read
	bracket type from hierarchy.

2005-11-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/rest.cc (y_offset_callback): read staff-position.

	* scm/define-grob-properties.scm (all-user-grob-properties): don't
	mark after-line-breaking-callback as internal.

	* lily/self-aligment-interface.cc: remove self-[XY]-offset.

2005-11-25  Werner Lemberg  <wl@gnu.org>

	* mf/feta-banier.mf ("d3"): Make `flare' equal to `staff_space'.

2005-11-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/bin/add-html-footer.py (do_file): add google

	* lily/staff-symbol-engraver.cc (process_music): bugfix: stop
	staff if first_start_ is true.

2005-11-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/midi2ly.py (split_track): add __repr__ members.
	(track_first_item): only return Item if not None. This fixes a
	problem when dumping a track that starts with an empty channel.

	* python/midi.c: doc module.

2005-11-22  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/global.itely (Creating MIDI files): Fix
	compilation problem.

2005-11-22  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/basic-notation.itely: clarify dynamic
	padding text.

	* Documentation/user/advanced-notation.itely: add unicode
	escape control example, whatever that is.  :)

	* Documentation/user/global.itely: added "removing dynamics
	from MIDI" code.

2005-11-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PATCH_LEVEL): release 2.7.18

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): replace
	System_start_delimiter_engraver by
	Nested_system_start_delimiter_engraver.

	* lily/nested-system-start-delimiter-engraver.cc (struct
	Bracket_nesting_node): new class.
	(struct Bracket_nesting_group): new class
	(struct Bracket_nesting_staff): new class.
	(process_music): create hierarchy of grobs. This allows separate
	tuning of different SSDs. 
